[gd_scene load_steps=19 format=3 uid="uid://bfmrjeoeuu5ak"]

[ext_resource type="Script" path="res://Functionality/Scripts/boss.gd" id="1_5tgxu"]
[ext_resource type="Texture2D" uid="uid://csrl8cstspr6l" path="res://Assets/bossUpperBody.png" id="2_3ckti"]
[ext_resource type="Texture2D" uid="uid://vwplbrtduobn" path="res://Assets/bossLowerBody.png" id="3_430vp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uvdrs"]
atlas = ExtResource("2_3ckti")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lbqp"]
atlas = ExtResource("2_3ckti")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_37gs2"]
atlas = ExtResource("2_3ckti")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoc7g"]
atlas = ExtResource("2_3ckti")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw1d5"]
atlas = ExtResource("2_3ckti")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1bvy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvdrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lbqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37gs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoc7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw1d5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wy058"]
atlas = ExtResource("3_430vp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8fh0"]
atlas = ExtResource("3_430vp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrw4v"]
atlas = ExtResource("3_430vp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tiev"]
atlas = ExtResource("3_430vp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2daug"]
atlas = ExtResource("3_430vp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tyqmn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy058")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8fh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tiev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2daug")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p021n"]
radius = 17.0
height = 113.158

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3xpw6"]
radius = 21.1111
height = 51.0204

[sub_resource type="CircleShape2D" id="CircleShape2D_0bc76"]
radius = 51.0098

[node name="Boss" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_5tgxu")

[node name="bossUpperBody" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_m1bvy")
autoplay = "default"
frame_progress = 0.588565

[node name="bossLowerBody" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_tyqmn")
autoplay = "default"
frame_progress = 0.871257

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(1, 0.76)
shape = SubResource("CapsuleShape2D_p021n")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(5, -3)
scale = Vector2(1.8, 1.96)
collision_layer = 2
collision_mask = 6

[node name="HitBoxShape" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-2.77778, -1.53061)
shape = SubResource("CapsuleShape2D_3xpw6")

[node name="Dash" type="Node2D" parent="."]

[node name="DashWarning" type="ColorRect" parent="Dash"]
offset_top = -20.0
offset_right = 250.0
offset_bottom = 20.0
color = Color(0.478431, 0, 0, 0.423529)

[node name="DashEnd" type="Node2D" parent="Dash"]
position = Vector2(300, 0)

[node name="dashDamageBox" type="Area2D" parent="Dash"]

[node name="DamageBoxShape" type="CollisionShape2D" parent="Dash/dashDamageBox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_0bc76")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="EruptionTimer" type="Timer" parent="."]

[node name="ConstructSpawnTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="Dash/dashDamageBox" to="." method="_on_dash_damage_box_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="EruptionTimer" to="." method="_on_eruption_timer_timeout"]
[connection signal="timeout" from="ConstructSpawnTimer" to="." method="_on_construct_spawn_timer_timeout"]
